Added initial computations of the percentage of outliers that are present in the actual interactions. Should be improved to consider the cases of no interactions.

--- a/contact_map.ipynb
+++ b/contact_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 111,
    "id": "ca699c3c-060a-4f9d-ba37-42b13f98b9e4",
    "metadata": {},
    "outputs": [],
@@ -132,11 +132,10 @@
     "\n",
     "    return contact_map\n",
     "\n",
-    "def get_cj_map(data_dict, cj_path):\n",
+    "def get_cj_map(data_dict, cj_path, n):\n",
     "    id_for_file = data_dict[\"id\"].translate(str.maketrans({'_': '-', '-': '_'}))\n",
     "    cj = np.load(f\"{cj_path}/{id_for_file}_fastCJ.npy\")\n",
     "    # Setting the threshold for the outlier count\n",
-    "    n = 3\n",
     "    m = np.mean(cj)\n",
     "    s = np.std(cj)\n",
     "    threshold = m+n*s\n",
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 108,
    "id": "bbf2ffe5-ec16-4511-a36d-eb8518451850",
    "metadata": {},
    "outputs": [],
@@ -160,9 +159,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 143,
    "id": "05a523d6-2aa3-4e5a-a782-730aae2fa170",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -203,9 +204,11 @@
     "precs = []\n",
     "recs = []\n",
     "bal_accs = []\n",
+    "perc_cj_bits_in_cm_arr = []\n",
     "for i in range(len(data)):\n",
+    "#for i in range(5):\n",
     "    contact_map = get_contact_map(data[i])\n",
-    "    cj_contact_map = get_cj_map(data[i], CJ_PATH)\n",
+    "    cj_contact_map = get_cj_map(data[i], CJ_PATH, n=3)\n",
     "    \n",
     "    # Compute the correlation between the quadrants\n",
     "    mcc = matthews_corrcoef(contact_map.flatten(), cj_contact_map.flatten())\n",
@@ -215,12 +218,20 @@
     "    mccs.append(mcc)\n",
     "    precs.append(prec)\n",
     "    recs.append(rec)\n",
-    "    bal_accs.append(bal_acc)"
+    "    bal_accs.append(bal_acc)\n",
+    "\n",
+    "    cj_bits_in_cm = np.where(cj_contact_map == 1, contact_map, 0)\n",
+    "    if(len(np.where(cj_contact_map == 1)[0])):\n",
+    "        perc_cj_bits_in_cm = cj_bits_in_cm.sum()/len(np.where(cj_contact_map == 1)[0])\n",
+    "    else:\n",
+    "        # TODO: How do I deal with the case, when there are no interactions?\n",
+    "        perc_cj_bits_in_cm = 0\n",
+    "    perc_cj_bits_in_cm_arr.append(perc_cj_bits_in_cm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 144,
    "id": "df55728c-0a9c-4644-aea3-66e316e678a6",
    "metadata": {},
    "outputs": [
@@ -231,7 +242,8 @@
       "MCC:  0.01678787636669346\n",
       "Precision:  0.018184007851413386\n",
       "Recall:  0.024420350163846048\n",
-      "Balanced accuracy:  0.5111404662081747\n"
+      "Balanced accuracy:  0.5111404662081747\n",
+      "Average percentage of outliers within contact map:  0.018184007851413386\n"
      ]
     }
    ],
@@ -245,7 +257,10 @@
     "print(\"Recall: \", np.average(recs))\n",
     "\n",
     "# Being right overall\n",
-    "print(\"Balanced accuracy: \", np.average(bal_accs))"
+    "print(\"Balanced accuracy: \", np.average(bal_accs))\n",
+    "\n",
+    "# How many matches of outliers in the contact map signal\n",
+    "print(\"Average percentage of outliers within contact map: \", np.average(perc_cj_bits_in_cm_arr))"
    ]
   }
  ],
