Added separated averaging.

--- a/contact_map.ipynb
+++ b/contact_map.ipynb
@@ -774,6 +774,36 @@
     "# Correlation coefficient between real distances and CJ signals\n",
     "print(\"Correlation between distances and CJ: \", np.average(dist_corr))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "ddb44367-99f4-44b2-8b42-bd99a13f1ebc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist_corr = np.array(dist_corr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "5a070260-a4a6-4db1-9998-8503e686d995",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average corr. coeff. for negative corr. coeff:  -0.017629402882166103\n",
+      "Average corr. coeff. for positive corr. coeff:  0.015131961982888818\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Average corr. coeff. for negative corr. coeff: \", np.average(dist_corr[np.where(dist_corr < 0)]))\n",
+    "print(\"Average corr. coeff. for positive corr. coeff: \", np.average(dist_corr[np.where(dist_corr >= 0)]))"
+   ]
   }
  ],
  "metadata": {
