Added the KL divergence computation.

--- a/data_process/assess_difficulty.ipynb
+++ b/data_process/assess_difficulty.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "5be21322-2e44-4698-8155-8925e9d835ef",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,8 @@
     "import matplotlib.pyplot as plt\n",
     "from pinder.core.loader import structure\n",
     "from Processor import Processor\n",
+    "import numpy as np\n",
+    "from scipy.special import rel_entr\n",
     "\n",
     "HOME = \"/scicore/home/schwede/pudziu0000/\"\n",
     "PINDER_BASE_DIR=\"/scicore/home/schwede/durair0000/.local/share/\"\n",
@@ -43,6 +45,9 @@
     "def plot_distributions(dist1, dist2, title):\n",
     "    matplotlib.rcParams['figure.dpi'] = 300\n",
     "    plt.figure(figsize=(10, 5))\n",
+    "\n",
+    "    hist1, _ = np.histogram(dist1, density=True)\n",
+    "    hist2, _ = np.histogram(dist2, density=True)\n",
     "    \n",
     "    plt.hist(dist1, color='red', alpha=0.5, label='positive')\n",
     "    plt.hist(dist2, color='blue', alpha=0.5, label='negative')\n",
@@ -52,6 +57,23 @@
     "    plt.legend()\n",
     "    \n",
     "    plt.show()\n",
+    "\n",
+    "    return hist1, hist2\n",
+    "\n",
+    "def compute_KL_divergence(hist1, hist2):\n",
+    "    # Clip to avoid division by zero and ensure valid inputs\n",
+    "    epsilon = 1e-10\n",
+    "    p1 = np.clip(hist1, epsilon, None)\n",
+    "    p2 = np.clip(hist2, epsilon, None)\n",
+    "    \n",
+    "    # Normalize histograms to make them proper probability distributions\n",
+    "    p1 /= p1.sum()\n",
+    "    p2 /= p2.sum()\n",
+    "    \n",
+    "    kl_12 = np.sum(rel_entr(p1, p2))\n",
+    "    kl_21 = np.sum(rel_entr(p2, p1))\n",
+    "    \n",
+    "    return kl_12, kl_21\n",
     "\n",
     "def get_pinder_seq_data(data_file):\n",
     "    df = pd.read_csv(data_file, sep=\"\\t\")\n",
@@ -91,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "201a0846-ac68-40cd-a852-e0be8aba9fdd",
    "metadata": {},
    "outputs": [
@@ -104,6 +126,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KL(1 | 0) divergence: 0.464\n",
+      "KL(0 | 1) divergence: 0.481\n"
+     ]
     }
    ],
    "source": [
@@ -111,12 +141,15 @@
     "pinder_emb_file = f\"{HOME}/projects/gLM/embeddings/PINDER-eubacteria-species/gLM2_650M_sep/test.pt\"\n",
     "\n",
     "pinder_pos_dists, pinder_neg_dists = get_distances(pinder_data_file, pinder_emb_file)\n",
-    "plot_distributions(pinder_pos_dists, pinder_neg_dists, title=\"Distance distribution in PINDER-eubacteria-species test set\")"
+    "pinder_hist_pos, pinder_hist_neg = plot_distributions(pinder_pos_dists, pinder_neg_dists, title=\"Distance distribution in PINDER-eubacteria-species test set\")\n",
+    "\n",
+    "kl_posneg, kl_negpos = compute_KL_divergence(pinder_hist_pos, pinder_hist_neg)\n",
+    "print(f\"KL(1 | 0) divergence: {kl_posneg:.3f}\\nKL(0 | 1) divergence: {kl_negpos:.3f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "049f9110-fc68-4f35-bdd5-215de2c04700",
    "metadata": {},
    "outputs": [
@@ -129,6 +162,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KL(1 | 0) divergence: 0.011\n",
+      "KL(0 | 1) divergence: 0.011\n"
+     ]
     }
    ],
    "source": [
@@ -136,7 +177,12 @@
     "bernett_emb_file = f\"{HOME}/projects/gLM/embeddings/Bernett2022_1k/gLM2_650M_sep/test.pt\"\n",
     "\n",
     "bernett_pos_dists, bernett_neg_dists = get_distances(bernett_data_file, bernett_emb_file)\n",
-    "plot_distributions(bernett_pos_dists, bernett_neg_dists, title=\"Distance distribution in Bernett2022-1k test set\")"
+    "bernett_hist_pos, bernett_hist_neg = plot_distributions(bernett_pos_dists, \n",
+    "    bernett_neg_dists, title=\"Distance distribution in Bernett2022-1k test set\"\n",
+    ")\n",
+    "\n",
+    "kl_posneg, kl_negpos = compute_KL_divergence(bernett_hist_pos, bernett_hist_neg)\n",
+    "print(f\"KL(1 | 0) divergence: {kl_posneg:.3f}\\nKL(0 | 1) divergence: {kl_negpos:.3f}\")"
    ]
   },
   {
