Started generation of the new data set. Stopped at the downsampling, which will be done based on the distribution of the distances between embeddings.

--- a/data_process/pinder_eubacteria_v2.ipynb
+++ b/data_process/pinder_eubacteria_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "id": "8e372a53-282c-4c38-b24b-e96982434ada",
    "metadata": {},
    "outputs": [],
@@ -76,17 +76,21 @@
     "            & (index[\"length1\"] <= max_length_per_monomer)\n",
     "            & (index[\"length2\"] <= max_length_per_monomer)\n",
     "            & (index[\"label\"] == \"BIO\")\n",
-    "            & (index[\"cluster_id_R\"] != index[\"cluster_id_L\"]) # Filter to keep heterodimers\n",
     "        ]\n",
-    "        if(split == \"train\"): train_index = index\n",
+    "        if(split == \"train\"): \n",
+    "            index = index[\n",
+    "                (index[\"length\"] + 2 <= max_length)\n",
+    "                & (index[\"length1\"] <= max_length_per_monomer)\n",
+    "                & (index[\"length2\"] <= max_length_per_monomer)\n",
+    "                & (index[\"label\"] == \"BIO\")\n",
+    "                & (index[\"cluster_id_R\"] != index[\"cluster_id_L\"])  # Filter to keep only heterodimers in training\n",
+    "            ]\n",
+    "            train_index = index\n",
     "        pinder_ids = list(index[\"id\"])\n",
     "        uniprot_ids = set(list(index[\"uniprot_R\"]) + list(index[\"uniprot_L\"]))\n",
     "        split_pinder_ids[split] = pinder_ids\n",
     "        split_uniprot_ids[split] = uniprot_ids\n",
     "    return split_pinder_ids, split_uniprot_ids, train_index\n",
-    "\n",
-    "def remove_homodimers():\n",
-    "    return None\n",
     "\n",
     "def reduce_train_redundancy(ids, index, max_per_cluster=5):\n",
     "    # ids - list of ids of the training set\n",
@@ -322,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "de970895-ea39-4f2b-b294-80003d7d5ebe",
    "metadata": {},
    "outputs": [
@@ -332,7 +336,7 @@
        "PosixPath('/scicore/home/schwede/durair0000/.local/share/pinder/2024-02')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "id": "f007fc0d-da6f-4e71-bac5-7b8cface420c",
    "metadata": {},
    "outputs": [],
@@ -354,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "id": "f82601cf-96a0-48b5-a2c0-badaccf3e11f",
    "metadata": {},
    "outputs": [
@@ -362,8 +366,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "338759 275 271\n",
-      "15116 459 456\n"
+      "338759 1799 1767\n",
+      "15116 1937 1906\n"
      ]
     }
    ],
@@ -382,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "id": "7df3af2a-b115-4ec8-8950-247b1a3de70d",
    "metadata": {},
    "outputs": [],
@@ -399,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "id": "9ebdca60-6e15-4274-ae87-e8fdf22ef01a",
    "metadata": {},
    "outputs": [
@@ -407,8 +411,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "301263 264 252\n",
-      "15115 458 455\n"
+      "301263 1748 1688\n",
+      "15115 1936 1905\n"
      ]
     }
    ],
@@ -451,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "id": "67c3212f-9a63-4823-bfe3-2215349b46c0",
    "metadata": {},
    "outputs": [],
@@ -485,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "id": "284544b4-bae4-48a3-8087-f21504d0745b",
    "metadata": {},
    "outputs": [],
@@ -505,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "id": "0bf36719-20e2-4059-941f-e34aa313d12b",
    "metadata": {},
    "outputs": [
@@ -513,7 +517,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17863 42 39\n"
+      "17863 680 645\n"
      ]
     }
    ],
@@ -526,33 +530,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "id": "87d70941-031b-4b6d-91ca-9bd44bb826eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for split in ['train']:\n",
+    "    homodimer_idx = []\n",
+    "    for i, id_ in enumerate(eubacteria_pinder_ids[split]):\n",
+    "        uniprot1 = id_.split(\"--\")[0].split(\"_\")[-1]\n",
+    "        uniprot2 = id_.split(\"--\")[1].split(\"_\")[-1]\n",
+    "        if(uniprot1 == uniprot2): homodimer_idx.append(i)\n",
+    "\n",
+    "    eubacteria_pinder_ids[split] = np.delete(\n",
+    "        eubacteria_pinder_ids[split], \n",
+    "        homodimer_idx\n",
+    "    ) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "66847f77-5086-4d21-986c-8068aed95d92",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "454 out of 17863\n",
-      "6 out of 42\n",
-      "3 out of 39\n"
+      "17409 680 645\n"
      ]
     }
    ],
    "source": [
-    "for split in ['train', 'val', 'test']:\n",
-    "    homodimer_count = 0\n",
-    "    for id_ in eubacteria_pinder_ids[split]:\n",
-    "        uniprot1 = id_.split(\"--\")[0].split(\"_\")[-1]\n",
-    "        uniprot2 = id_.split(\"--\")[1].split(\"_\")[-1]\n",
-    "        if(uniprot1 == uniprot2): homodimer_count += 1\n",
-    "    print(homodimer_count, \"out of\", len(eubacteria_pinder_ids[split]))"
+    "print(len(eubacteria_pinder_ids['train']),\n",
+    "      len(eubacteria_pinder_ids['val']),\n",
+    "      len(eubacteria_pinder_ids['test'])\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "id": "6e0dfa7d-1c68-447b-a077-bba512ff2019",
    "metadata": {},
    "outputs": [
@@ -560,22 +579,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting positives\n",
-      "Getting negatives\n",
-      "Getting positives\n",
-      "Getting negatives\n",
-      "Getting positive sequences\n",
-      "Getting negative sequences\n",
-      "Generating embeddings\n",
-      "Computing distances\n",
-      "val (np.float64(0.138340278434668), np.float64(1.2232302261250492))\n",
-      "Getting positives\n",
-      "Getting negatives\n",
-      "Getting positive sequences\n",
-      "Getting negative sequences\n",
-      "Generating embeddings\n",
-      "Computing distances\n",
-      "test (np.float64(0.28113076157393474), np.float64(0.2094895193802151))\n"
+      "split\tKL(1|0)\tKL(0|1)\n",
+      "val\t1.640\t3.761\n",
+      "test\t1.222\t1.455\n"
      ]
     },
     {
@@ -611,97 +617,83 @@
     "hist_pos = {}\n",
     "hist_neg = {}\n",
     "\n",
+    "n_samples = 100\n",
+    "\n",
+    "print(f\"split\\tKL(1|0)\\tKL(0|1)\")\n",
+    "\n",
     "for split in [\"train\", \"val\", \"test\"]:\n",
-    "    print(\"Getting positives\")\n",
     "    positives[split] = get_positives_df(split, eubacteria_pinder_ids, eubacteria_pinder_phyla)\n",
     "    \n",
-    "    print(\"Getting negatives\")\n",
     "    negatives[split] = make_negative_pairs(positives[split], \n",
     "        positives[\"train\"], eubacteria_annotated_interactions, \n",
     "        eubacteria_GO, tax_level=TAX_LEVEL\n",
     "    )\n",
     "\n",
-    "    # Generate embeddings\n",
-    "    if(split != 'train'):\n",
-    "        print(\"Getting positive sequences\")\n",
-    "        pos_seq[split] = get_sequences(positives[split])\n",
+    "    if(split == 'train'): continue\n",
     "\n",
-    "        # Get sequences of the negative complexes\n",
-    "        print(\"Getting negative sequences\")\n",
-    "        neg_seq[split] = get_sequences(negatives[split])\n",
-    "        \n",
-    "        print(\"Generating embeddings\")\n",
-    "        pos_embs_R[split], pos_embs_L[split] = generate_embeddings(\n",
-    "            positives[split], pos_seq[split], model, tokenizer, \n",
-    "            num_samples=len(positives[split]), emb_dim=1280\n",
-    "        )\n",
-    "        neg_embs_R[split], neg_embs_L[split] = generate_embeddings(\n",
-    "            negatives[split], neg_seq[split], model, tokenizer, \n",
-    "            num_samples=len(negatives[split]), emb_dim=1280\n",
-    "        )\n",
-    "    \n",
-    "        # Compute distances\n",
-    "        print(\"Computing distances\")\n",
-    "        pos_dists[split] = torch.cdist(\n",
-    "            pos_embs_R[split], \n",
-    "            pos_embs_L[split]\n",
-    "        ).diag()\n",
-    "        neg_dists[split] = torch.cdist(\n",
-    "            neg_embs_R[split], \n",
-    "            neg_embs_L[split]\n",
-    "        ).diag()\n",
-    "    \n",
-    "        # Plot\n",
-    "        hist_pos[split], hist_neg[split] = plot_distributions(\n",
-    "            pos_dists[split], neg_dists[split], \n",
-    "            f\"Distance distribution of {split} subset\", split\n",
-    "        )\n",
-    "    \n",
-    "        # Compute KL divergence\n",
-    "        print(split, compute_KL_divergence(hist_pos[split], hist_neg[split]))\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    # Preparations to save\n",
-    "    \n",
-    "    split_positives = split_positives[[\"pinder_id_R\", \"pinder_id_L\", f\"{TAX_LEVEL}_R\", f\"{TAX_LEVEL}_L\"]]\n",
+    "    # Get sequences\n",
+    "    pos_seq[split] = get_sequences(positives[split][:n_samples])\n",
+    "    neg_seq[split] = get_sequences(negatives[split][:n_samples])\n",
     "\n",
-    "    split_positives = rename_columns(split_positives, tax_level=TAX_LEVEL)\n",
-    "    split_negatives = rename_columns(split_negatives, to_drop=\"pinder_id\", tax_level=TAX_LEVEL)\n",
-    "    \"\"\"\n"
+    "    # Get embeddings\n",
+    "    pos_embs_R[split], pos_embs_L[split] = generate_embeddings(\n",
+    "        positives[split][:n_samples], pos_seq[split], model, tokenizer, \n",
+    "        num_samples=n_samples, emb_dim=1280\n",
+    "    )\n",
+    "    neg_embs_R[split], neg_embs_L[split] = generate_embeddings(\n",
+    "        negatives[split][:n_samples], neg_seq[split], model, tokenizer, \n",
+    "        num_samples=n_samples, emb_dim=1280\n",
+    "    )\n",
+    "\n",
+    "    # Compute distances\n",
+    "    pos_dists[split] = torch.cdist(\n",
+    "        pos_embs_R[split], \n",
+    "        pos_embs_L[split]\n",
+    "    ).diag()\n",
+    "    neg_dists[split] = torch.cdist(\n",
+    "        neg_embs_R[split], \n",
+    "        neg_embs_L[split]\n",
+    "    ).diag()\n",
+    "\n",
+    "    # Plot distances distribution\n",
+    "    hist_pos[split], hist_neg[split] = plot_distributions(\n",
+    "        pos_dists[split], neg_dists[split], \n",
+    "        f\"Distance distribution of {split} subset\", split\n",
+    "    )\n",
+    "\n",
+    "    # Compute KL divergence\n",
+    "    kl10, kl01 = compute_KL_divergence(hist_pos[split], hist_neg[split])\n",
+    "    print(f\"{split}\\t{kl10:.3f}\\t{kl01:.3f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "id": "90b837a8-05e1-49a4-a43d-955d3ba74990",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "33"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17409 8908 680 470 645 454\n"
+     ]
     }
    ],
    "source": [
-    "len(negatives['test'])"
+    "print(\n",
+    "    len(positives['train']),\n",
+    "    len(negatives['train']),\n",
+    "    len(positives['val']),\n",
+    "    len(negatives['val']),\n",
+    "    len(positives['test']),\n",
+    "    len(negatives['test'])\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "08dd0851-1e19-40b0-8821-b9af1d54fa9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "id": "2c897770-537a-442b-96d9-7c13bfd4984d",
    "metadata": {},
    "outputs": [],
@@ -714,24 +706,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "259f3538-e7e8-4fa2-907b-aaf46d39d17c",
+   "execution_count": 68,
+   "id": "67917238-e0d4-40e5-84d5-25036fa55f01",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3441 42 39\n"
+      "3144 680 645\n"
      ]
     }
    ],
    "source": [
-    "# Number of elements in each split after redundancy removal\n",
+    "# Number of positive elements in each split after redundancy removal\n",
     "print(len(eubacteria_pinder_ids['train']),\n",
     "      len(eubacteria_pinder_ids['val']),\n",
     "      len(eubacteria_pinder_ids['test'])\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e030bdd6-7dfd-4415-aaf9-fabd2dc1606d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "split\tKL(1|0)\tKL(0|1)\n",
+      "train\t1.935\t0.293\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 3000x1500 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(f\"split\\tKL(1|0)\\tKL(0|1)\")\n",
+    "\n",
+    "for split in [\"train\"]:\n",
+    "    positives[split] = get_positives_df(split, eubacteria_pinder_ids, eubacteria_pinder_phyla)\n",
+    "    \n",
+    "    negatives[split] = make_negative_pairs(positives[split], \n",
+    "        positives[\"train\"], eubacteria_annotated_interactions, \n",
+    "        eubacteria_GO, tax_level=TAX_LEVEL\n",
+    "    )\n",
+    "\n",
+    "    pos_seq[split] = get_sequences(positives[split][:n_samples])\n",
+    "    neg_seq[split] = get_sequences(negatives[split][:n_samples])\n",
+    "    \n",
+    "    pos_embs_R[split], pos_embs_L[split] = generate_embeddings(\n",
+    "        positives[split][:n_samples], pos_seq[split], model, tokenizer, \n",
+    "        num_samples=n_samples, emb_dim=1280\n",
+    "    )\n",
+    "    neg_embs_R[split], neg_embs_L[split] = generate_embeddings(\n",
+    "        negatives[split][:n_samples], neg_seq[split], model, tokenizer, \n",
+    "        num_samples=n_samples, emb_dim=1280\n",
+    "    )\n",
+    "\n",
+    "    pos_dists[split] = torch.cdist(\n",
+    "        pos_embs_R[split], \n",
+    "        pos_embs_L[split]\n",
+    "    ).diag()\n",
+    "    neg_dists[split] = torch.cdist(\n",
+    "        neg_embs_R[split], \n",
+    "        neg_embs_L[split]\n",
+    "    ).diag()\n",
+    "\n",
+    "    # Plot distances distribution\n",
+    "    hist_pos[split], hist_neg[split] = plot_distributions(\n",
+    "        pos_dists[split], neg_dists[split], \n",
+    "        f\"Distance distribution of {split} subset\", split\n",
+    "    )\n",
+    "\n",
+    "    # Compute KL divergence\n",
+    "    kl10, kl01 = compute_KL_divergence(hist_pos[split], hist_neg[split])\n",
+    "    print(f\"{split}\\t{kl10:.3f}\\t{kl01:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "892cfa16-7a58-49ad-a265-489b1cc52a38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3144 2301 680 470 645 454\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    len(positives['train']),\n",
+    "    len(negatives['train']),\n",
+    "    len(positives['val']),\n",
+    "    len(negatives['val']),\n",
+    "    len(positives['test']),\n",
+    "    len(negatives['test'])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30f2a12b-c7b2-48fd-afc2-cd614ed86cb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Downsample positives"
    ]
   },
   {
