Added the generation of mixed test set with harder pairs of negatives.

--- a/data_process/pinder_eubacteria_heterodimers.ipynb
+++ b/data_process/pinder_eubacteria_heterodimers.ipynb
@@ -530,11 +530,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "87d70941-031b-4b6d-91ca-9bd44bb826eb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Removing homodimers from train set\n",
+    "\n",
     "for split in ['train']:\n",
     "    homodimer_idx = []\n",
     "    for i, id_ in enumerate(eubacteria_pinder_ids[split]):\n",
@@ -550,18 +552,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "66847f77-5086-4d21-986c-8068aed95d92",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17409 680 645\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(eubacteria_pinder_ids['train']),\n",
     "      len(eubacteria_pinder_ids['val']),\n",
