Added saving of UQRs for the heterodimers test split.

--- a/data_process/contact_map.ipynb
+++ b/data_process/contact_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "ca699c3c-060a-4f9d-ba37-42b13f98b9e4",
    "metadata": {},
    "outputs": [],
@@ -163,10 +163,10 @@
     "    threshold = m+n*s\n",
     "\n",
     "    # Retrieving upper-right quadrant and skipping the tokens <+>\n",
-    "    if(biolm == \"gLM2\"):\n",
+    "    if(biolm == \"glm2\"):\n",
     "        upper_right_quadrant_cj = cj[1:data_dict[\"len_r\"]+1, data_dict[\"len_r\"]+2:]\n",
     "        upper_right_quadrant_cm = np.where(upper_right_quadrant_cj > threshold, 1, 0)\n",
-    "    elif(biolm == \"MINT\"):\n",
+    "    elif(biolm == \"mint\"):\n",
     "        upper_right_quadrant_cj = cj[1:data_dict[\"len_r\"]+1, data_dict[\"len_r\"]+3:-1]\n",
     "        upper_right_quadrant_cm = np.where(upper_right_quadrant_cj > threshold, 1, 0)\n",
     "    \n",
@@ -175,7 +175,7 @@
     "\n",
     "    return upper_right_quadrant_cm, upper_right_quadrant_cj\n",
     "\n",
-    "def get_metrics(data, cj_path, biolm=\"gLM2\"):\n",
+    "def get_metrics(data, cj_path, biolm=\"glm2\"):\n",
     "    mccs = []\n",
     "    precs = []\n",
     "    recs = []\n",
@@ -188,7 +188,7 @@
     "    neg_dists = []\n",
     "    pos_dists = []\n",
     "\n",
-    "    if(biolm == \"MINT\"):\n",
+    "    if(biolm == \"mint\"):\n",
     "        n = 2**(-5)\n",
     "    else:\n",
     "        n = 3\n",
@@ -409,14 +409,14 @@
     "# Loading the categorical Jacobian\n",
     "CJ_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/outputs/categorical_jacobians/mint_cosine/\"\n",
     "\n",
-    "avg_metrics, dist_info = get_metrics(data, CJ_PATH, biolm=\"MINT\")\n",
+    "avg_metrics, dist_info = get_metrics(data, CJ_PATH, biolm=\"mint\")\n",
     "present_metrics(avg_metrics)\n",
     "plot_distance_distribution(dist_info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "c6c935c3-685c-4eaa-8f58-f90f2204757b",
    "metadata": {},
    "outputs": [
@@ -426,15 +426,40 @@
        "52"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "48019972-c825-4983-8518-62519a6309e9",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "SPLITS_DIR=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512_species_heterodimers/\"\n",
+    "URQS_CM_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/outputs/urqs/contact_maps/\"\n",
+    "BIOLM=\"glm2\"\n",
+    "\n",
+    "CJ_PATH=f\"/scicore/home/schwede/pudziu0000/projects/gLM/outputs/categorical_jacobians/{BIOLM}_cosine/\"\n",
+    "URQS_CJ_PATH=f\"/scicore/home/schwede/pudziu0000/projects/gLM/outputs/urqs/{BIOLM}_cosine/\"\n",
+    "\n",
     "data = get_atom_data(\"test\")\n",
-    "len(data)"
+    "print(f\"Number of data points: {len(data)}\")\n",
+    "\n",
+    "os.makedirs(URQS_CJ_PATH, exist_ok=True)\n",
+    "os.makedirs(URQS_CM_PATH, exist_ok=True)\n",
+    "\n",
+    "for i in range(len(data)):\n",
+    "    contact_map = get_contact_map(data[i], padding=None)\n",
+    "    cj_contact_map, cj = get_cj_map(data[i], CJ_PATH, n=3, padding=None, biolm=\"glm2\")\n",
+    "    complex_id = data[i]['id'].translate(str.maketrans({'_': '-', '-': '_'}))\n",
+    "    np.save(f\"{URQS_CM_PATH}/{complex_id}.npy\", contact_map)\n",
+    "    np.save(f\"{URQS_CJ_PATH}/{complex_id}.npy\", cj)\n",
+    "    "
    ]
   },
   {
@@ -516,7 +541,7 @@
     "# Loading the categorical Jacobian\n",
     "CJ_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/outputs/categorical_jacobians/mint_cosine/\"\n",
     "\n",
-    "avg_metrics, dist_info = get_metrics(data, CJ_PATH, biolm=\"MINT\")\n",
+    "avg_metrics, dist_info = get_metrics(data, CJ_PATH, biolm=\"mint\")\n",
     "present_metrics(avg_metrics)\n",
     "plot_distance_distribution(dist_info)"
    ]
