Adapted the title for distribution plots/

--- a/data_process/pinder_eubacteria_heterodimers_leak_free.ipynb
+++ b/data_process/pinder_eubacteria_heterodimers_leak_free.ipynb
@@ -266,7 +266,7 @@
     "    plt.hist(dist2, color='blue', alpha=0.5, label='negative')\n",
     "    plt.xlabel('distance')\n",
     "    plt.ylabel('frequency')\n",
-    "    plt.title(title)\n",
+    "    plt.title(title, wrap=True)\n",
     "    plt.legend()\n",
     "    \n",
     "    plt.savefig(f\"{SPLITS_DIR}/{split}.png\", dpi=200)\n",
@@ -933,7 +933,7 @@
     "    )\n",
     "    hist_pos, hist_neg = plot_distributions(\n",
     "        pos_dists[split][pos_idx], neg_dists[split][neg_idx], \n",
-    "        f\"Distance distribution of downsampled {split} subset\", f\"{split}_downsampled\"\n",
+    "        f\"Distance distribution of downsampled PINDER-eubacteria-species-heterodimers {split} subset\", f\"{split}_downsampled\"\n",
     "    )\n",
     "    \n",
     "    kl10, kl01 = compute_KL_divergence(hist_pos, hist_neg)\n",
