Updated mint script to retrieve embeddings and notebooks for data generation and interface analysis.

--- a/data_process/pinder_eubacteria_heterodimers_leak_free.ipynb
+++ b/data_process/pinder_eubacteria_heterodimers_leak_free.ipynb
@@ -662,7 +662,7 @@
     "    # Plot distances distribution\n",
     "    hist_pos[split], hist_neg[split] = plot_distributions(\n",
     "        pos_dists[split], neg_dists[split], \n",
-    "        f\"Distance distribution of {split} subset\", split\n",
+    "        f\"Distance distribution of PINDER-eubacteria-species-heterodimers {split} set\", split\n",
     "    )\n",
     "\n",
     "    # Compute KL divergence\n",
@@ -789,7 +789,7 @@
     "    # Plot distances distribution\n",
     "    hist_pos[split], hist_neg[split] = plot_distributions(\n",
     "        pos_dists[split], neg_dists[split], \n",
-    "        f\"Distance distribution of {split} subset\", split\n",
+    "        f\"Distance distribution of PINDER-eubacteria-species-heterodimers {split} set\", split\n",
     "    )\n",
     "\n",
     "    # Compute KL divergence\n",
@@ -933,7 +933,7 @@
     "    )\n",
     "    hist_pos, hist_neg = plot_distributions(\n",
     "        pos_dists[split][pos_idx], neg_dists[split][neg_idx], \n",
-    "        f\"Distance distribution of downsampled PINDER-eubacteria-species-heterodimers {split} subset\", f\"{split}_downsampled\"\n",
+    "        f\"Distance distribution of PINDER-eubacteria-species-heterodimers {split} set\", f\"{split}_downsampled\"\n",
     "    )\n",
     "    \n",
     "    kl10, kl01 = compute_KL_divergence(hist_pos, hist_neg)\n",
