--- a/data_process/pinder_lineage_taxids.ipynb
+++ b/data_process/pinder_lineage_taxids.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "8e372a53-282c-4c38-b24b-e96982434ada",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "284544b4-bae4-48a3-8087-f21504d0745b",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "2d60ac14-2cc1-4824-9a8a-e5fbd0aa4781",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "60db2aa2-64a1-4def-8475-dd9320b53a2e",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "c2178c4b-2b35-4ea5-a584-bc67ea42c64c",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
        "[1580 rows x 8 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
+   "id": "dfae18e1-d9c8-4dcf-a1e2-be346f0e96be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tax_df.to_csv(\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_taxonomy_based_predictions.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "e2f77aeb-5229-4478-8430-559130283718",
    "metadata": {},
    "outputs": [
@@ -451,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "5f6ceb07-5c43-4005-8bc2-7426f8a73e4b",
    "metadata": {},
    "outputs": [
@@ -551,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "f957cda1-270c-4092-a3b0-2301e83e7a05",
    "metadata": {},
    "outputs": [
@@ -624,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "02a5d7da-cc62-4c6c-85ff-a63c007cb222",
    "metadata": {},
    "outputs": [
@@ -694,6 +704,8 @@
     "\n",
     "tax_df = get_tax_df_from_dataset(DATASET_PREFIX, split=\"test\")\n",
     "\n",
+    "tax_df.to_csv(\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/genus_taxonomy_based_predictions.csv\")\n",
+    "\n",
     "metrics = get_predictions_based_on_tax_level(tax_df, n_iter=1000)\n",
     "\n",
     "make_violinplots(metrics, \"taxonomy_level_based_predictor_within_genus\", title=\"MCC of taxonomy level-based predictors on PINDER-eubacteria-genus set\")"
@@ -701,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "6f959a38-67fe-4295-a66f-2e5118ca4a75",
    "metadata": {},
    "outputs": [
@@ -770,6 +782,7 @@
     "DATASET_PREFIX=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512_species/\"\n",
     "\n",
     "tax_df = get_tax_df_from_dataset(DATASET_PREFIX, split=\"test\")\n",
+    "tax_df.to_csv(\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/species_taxonomy_based_predictions.csv\")\n",
     "\n",
     "metrics = get_predictions_based_on_tax_level(tax_df, n_iter=1000)\n",
     "\n",
